deploy/app-httpsdeploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: neilghosh/gradle-spring-boot-app:latest
        imagePullPolicy: Always
        ports:
           - name: http
             containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
 name: app-backend
spec:
 type: LoadBalancer
 selector:
   app: app
 ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
