deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - app.centralus.cloudapp.azure.com
    secretName: app-tls
  rules:
  - host: app.centralus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-backend
          servicePort: 80
